Added system file exception handler

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-md-4">
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="file" name="file" onchange="updateFileNameLabel()">
+                    <input type="file" class="custom-file-input" id="file" name="file" onchange="updateFileNameLabel()" required>
                     <label class="custom-file-label" id="fileLabel" for="file">Choose file</label>
                 </div>
             </div>
