--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -14,8 +14,16 @@
     <a class="navbar-brand" href="#">File Manager App</a>
 </nav>
 
+<!-- Smaller Jumbotron -->
+<div class="jumbotron bg-light align-items-center" style="padding-top: 1rem; padding-bottom: 1rem;">
+    <div class="container" style="margin-top: 70px;">
+        <h3 class="display-5 text-center">Store and retrieve files to cloud</h3>
+        <p class="lead text-center">Web application built with Spring Boot to manage files in Amazon Web Services (AWS) S3</p>
+    </div>
+</div>
+
 <!-- Content -->
-<div class="container" style="margin-top: 90px;">
+<div class="container">
 
     <!-- File Upload Form -->
     <form id="uploadForm" enctype="multipart/form-data" method="POST" action="/fma/upload" onsubmit="event.preventDefault(); upload()">
@@ -100,9 +108,9 @@
             </th:block>
         </ul>
     </nav>
-
 </div>
 
+</body>
 <script th:inline="javascript">
     function confirmDelete(fileName, fileId) {
         if (confirm('Are you sure you want to delete this file?\n\nFilename: ' + fileName)) {
@@ -171,6 +179,4 @@
         return parseFloat((bytes / Math.pow(k, i)).toFixed(2)) + ' ' + sizes[i];
     }
 </script>
-
-</body>
 </html>
