--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -103,7 +103,7 @@
 
             <!-- Total elements -->
             <li class="page-item disabled">
-                <span class="page-link">Total elements: [[${pageResponse.totalElements}]]</span>
+                <span class="page-link">Total Files Uploaded: [[${pageResponse.totalElements}]]</span>
             </li>
             </th:block>
         </ul>
